--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: <%= ENV.fetch("P_MYSQL_PASS") %>
+  password: <%= Rails.application.secrets.parodyreon_mysql_pass %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
